suil (0.10.21) unstable; urgency=medium

  * Add support for X11 in Qt6
  * Fix library current_version on MacOS

 -- David Robillard <d@drobilla.net>  Thu, 11 Jul 2024 23:40:43 +0000

suil (0.10.20) stable; urgency=medium

  * Allow SUIL_API to be defined by the user
  * Fix dependencies in pkg-config file
  * Only check for Gtk Quartz support on MacOS
  * Override pkg-config dependency within meson
  * Remove Gtk in Qt and Qt in Gtk wrappers
  * Remove junk files from documentation install
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency

 -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:11:10 +0000

suil (0.10.18) stable; urgency=medium

  * Add project metadata
  * Adopt REUSE machine-readable licensing standard
  * Fix MacOS build when Gtk3 and Qt5 are present without X11
  * Fix opening wrapped UIs multiple times in Gtk

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:29:12 +0000

suil (0.10.16) stable; urgency=medium

  * Fix wrapper module installation path

 -- David Robillard <d@drobilla.net>  Fri, 12 Aug 2022 22:17:10 +0000

suil (0.10.14) stable; urgency=medium

  * Fix MacOS build
  * Fix documentation install path
  * Remove dead Qt4 support code
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:14:05 +0000

suil (0.10.12) stable; urgency=medium

  * Fix build issues with newer toolchains
  * Fix some compiler warnings
  * Remove Qt4 support

 -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 01:43:47 +0000

suil (0.10.10) stable; urgency=medium

  * Clean up minor code issues
  * Remove the need for a generated configuration header

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:40:54 +0000

suil (0.10.8) stable; urgency=medium

  * Fix X11 in Gtk size regressions (thanks Robin Gareus)
  * Fix compilation on MacOS older than 10.12
  * Fix drag and drop for X11 in Gtk
  * Fix various minor warnings and other code quality issues
